// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create a function 1`] = `
Object {
  "root": Object {
    "children": Object {
      "my_function": Object {
        "props": Object {
          "environmentVariables": Object {
            "ENV_VAR1": "true",
            "WING_SIM_RUNTIME_FUNCTION_ADDR": "c85c4e0e66bf385ab6b159bab34fb32dd81aad0a1d",
          },
          "sourceCodeFile": "assets/my_function/index.js",
          "sourceCodeLanguage": "javascript",
        },
        "type": "wingsdk.cloud.Function",
      },
    },
    "type": "constructs.Construct",
  },
  "startOrder": Array [
    "root/my_function",
  ],
}
`;

exports[`invoke function 1`] = `
Object {
  "root": Object {
    "children": Object {
      "my_function": Object {
        "props": Object {
          "environmentVariables": Object {
            "WING_SIM_RUNTIME_FUNCTION_ADDR": "c85c4e0e66bf385ab6b159bab34fb32dd81aad0a1d",
          },
          "sourceCodeFile": "assets/my_function/index.js",
          "sourceCodeLanguage": "javascript",
        },
        "type": "wingsdk.cloud.Function",
      },
    },
    "type": "constructs.Construct",
  },
  "startOrder": Array [
    "root/my_function",
  ],
}
`;

exports[`invoke function with environment variables 1`] = `
Object {
  "root": Object {
    "children": Object {
      "my_function": Object {
        "props": Object {
          "environmentVariables": Object {
            "PIG_LATIN": "true",
            "WING_SIM_RUNTIME_FUNCTION_ADDR": "c85c4e0e66bf385ab6b159bab34fb32dd81aad0a1d",
          },
          "sourceCodeFile": "assets/my_function/index.js",
          "sourceCodeLanguage": "javascript",
        },
        "type": "wingsdk.cloud.Function",
      },
    },
    "type": "constructs.Construct",
  },
  "startOrder": Array [
    "root/my_function",
  ],
}
`;
